--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "devDependencies": {
     "@types/archiver": "^5.1.0",
+    "@types/mime-types": "^2.1.0",
     "@types/node-cron": "^2.0.3",
+    "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "archiver": "^5.2.0",
+    "googleapis": "^67.0.0",
+    "mime-types": "^2.1.28",
     "node-cron": "^2.0.3"
   }
 }
