--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
+    "start": "node dist/index.js",
     "dev": "nodemon",
     "watch": "tsc --watch"
   },
@@ -15,9 +16,11 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.0",
     "archiver": "^5.2.0",
     "googleapis": "^67.0.0",
     "mime-types": "^2.1.28",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "nodemailer": "^6.4.17"
   }
 }
