--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "drive-cron",
-  "version": "1.0.0",
+  "name": "schedule-command",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "license": "MIT",
+  "author": "daniellrs",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon",
@@ -22,5 +23,12 @@
     "mime-types": "^2.1.28",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.17"
+  },
+  "files": [
+    "dist",
+    "package.json"
+  ],
+  "exports": {
+    "./": "./dist"
   }
 }
