--- a/packages/cronmand/tsconfig.json
+++ b/packages/cronmand/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "../../tsconfig"
+  "extends": "../../tsconfig",
+  "compilerOptions": {
+    "baseUrl": "./",
+    "outDir": "./dist",
+    "rootDir": "./src"
+  }
 }
