--- a/packages/cronmand/package.json
+++ b/packages/cronmand/package.json
@@ -12,6 +12,7 @@
     "pub": "tsc && yarn publish"
   },
   "devDependencies": {
+    "@types/node": "^14.14.31",
     "@types/node-cron": "^2.0.3",
     "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
