--- a/packages/cronmand-archiver/package.json
+++ b/packages/cronmand-archiver/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cronmand/core",
+  "name": "@cronmand/archiver",
   "version": "0.0.1",
   "main": "dist/index.js",
   "license": "MIT",
@@ -13,12 +13,12 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
-    "@types/node-cron": "^2.0.3",
+    "@types/archiver": "^5.1.0",
     "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "node-cron": "^2.0.3"
+    "archiver": "^5.2.0"
   },
   "publishConfig": {
     "access": "public"
