--- a/packages/cronmand-drive/package.json
+++ b/packages/cronmand-drive/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "schedule-command",
-  "version": "1.0.9",
+  "name": "@cronmand/drive",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "license": "MIT",
   "author": "daniellrs",
@@ -12,19 +12,14 @@
     "pub": "tsc && yarn publish"
   },
   "devDependencies": {
-    "@types/archiver": "^5.1.0",
+    "@types/node": "^14.14.31",
     "@types/mime-types": "^2.1.0",
-    "@types/node-cron": "^2.0.3",
     "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@types/nodemailer": "^6.4.0",
-    "archiver": "^5.2.0",
     "googleapis": "^67.0.0",
-    "mime-types": "^2.1.28",
-    "node-cron": "^2.0.3",
-    "nodemailer": "^6.4.17"
+    "mime-types": "^2.1.28"
   },
   "publishConfig": {
     "access": "public"
