--- a/packages/cronmand-archiver/package.json
+++ b/packages/cronmand-archiver/package.json
@@ -10,12 +10,13 @@
     "pub": "tsc && yarn publish"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
     "@types/archiver": "^5.1.0",
+    "@types/node": "^14.14.31",
     "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@cronmand/core": "^0.0.1",
     "archiver": "^5.2.0"
   },
   "publishConfig": {
