--- a/packages/cronmand-drive/package.json
+++ b/packages/cronmand-drive/package.json
@@ -10,12 +10,13 @@
     "pub": "tsc && yarn publish"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
     "@types/mime-types": "^2.1.0",
+    "@types/node": "^14.14.31",
     "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@cronmand/core": "^0.0.1",
     "googleapis": "^67.0.0",
     "mime-types": "^2.1.28"
   },
