--- a/packages/cronmand-mailer/package.json
+++ b/packages/cronmand-mailer/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@cronmand/core": "^0.0.1",
     "nodemailer": "^6.4.17"
   },
   "publishConfig": {
